# PortfolioPal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  crontab  fly.toml  pyproject.toml  scrapy.cfg
api/: database.py  enums.py  main.py  models.py  schemas.py  services.py
api/routers/: alphastreet.py  playground.py  track.py
crawler/: constants.py  exceptions.py  extensions.py  fundamentals.json  items.py  pipelines.py  settings.py
crawler/spiders/: alphastreet.py  moneycontrol.py  youtube.py
