[tool.poetry]
name = "portfolio-pal"
version = "0.1.0"
description = ""
authors = ["Advik <adviksingh6632@gmail.com>"]
readme = "README.md"
packages = [{include = "portfolio_pal"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
colorlog = "^6.7.0"
fastapi = {extras = ["all"], version = "^0.97.0"}
sqlalchemy = "^2.0.16"
sqlalchemy2-stubs = "^0.0.2a34"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
