[tool.poetry]
name = "PortfolioPal"
version = "0.1.0"
description = ""
authors = ["Advik <adviksingh6632@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.9.0"
colorlog = "^6.7.0"
fastapi = {extras = ["all"], version = "^0.101.1"}
sqlalchemy2-stubs = "^0.0.2a34"
fastapi-pagination = "^0.12.8"
sqlalchemy = "^2.0.20"
dateparser = "^1.1.8"
psycopg2-binary = "^2.9.7"
cloudflare = "^2.11.7"
workers-kv-py = "^1.2.2"
openai = "^0.28.1"
sentry-sdk = "^1.32.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.3.0"
# ruff = "^13.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
